<resources>
    <string name="app_name">REmindey</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_todo_hint">e.g., Watch Rick and Morty</string>
    <string name="enter_list_hint">e.g., Shopping</string>

    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="about_text">REmindey - by Eddie and Odi - version 1</string>
    <string name="add_todos">Add a Todo...</string>

    <string name="radio_daily">Daily</string>
    <string name="radio_monthly">Monthly</string>
    <string name="radio_weekly">Weekly</string>

    <string name="radio_repeat_end_on">End On</string>
    <string name="radio_repeat_end_never">Never</string>

    <string name="set_time">Set Time</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_today">Today</string>
    <string name="menu_tomorrow">Tomorrow</string>
    <string name="menu_all">All Reminders</string>
    <string name="menu_add_list">Add list</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="signup_text">SIGN UP</string>
    <string name="create_account_text">CREATE NEW ACCOUNT</string>
    <string name="username_hint">Username</string>
    <string name="action_signout">Sign out</string>
    <string name="title_activity_settings">Customize your reminders</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="location_header">Location</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="location_title">Your Home Location</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="default_notification_channel_id">firebaseChannel</string>
    <string name="personal_header">Personal Preferences</string>
    <string name="welcome_to_n_remindey">Welcome To REmindey</string>

</resources>