<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/dimen_16"
    tools:context=".LoginActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/email_login_form">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:id="@+id/password"
        android:layout_marginTop="@dimen/dimen_16"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_sign_in_button"
        android:text="@string/login_text"
        android:layout_marginTop="@dimen/dimen_16"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_sign_up_button"
        android:text="@string/signup_text"
        android:textStyle="bold"
        android:textColor="@color/indigo_500"
        android:background="@android:color/transparent"/>
    </LinearLayout>
</LinearLayout>